--- a/Resources/Private/Language/locallang_resource_storage_messages.xlf
+++ b/Resources/Private/Language/locallang_resource_storage_messages.xlf
@@ -7,10 +7,10 @@
                 <source>The files in this storage (%s) exceeded the Quota limit (%s).</source>
             </trans-unit>
             <trans-unit id="result_will_exceed_quota">
-                <source>The desired action would use more space in this storage (%s) as the Quota limit (%s) permits.</source>
+                <source>The desired action would use more space on this storage (%s) than permitted by the quota limit (%s).</source>
             </trans-unit>
             <trans-unit id="copy_folder_result_will_exceed_quota">
-                <source>The desired action would use more space in the target storage as the Quota limit (%s) permits.</source>
+                <source>The desired action would use more space on the target storage than permitted by the quota limit (%s)´.</source>
             </trans-unit>
         </body>
     </file>
