[CHANGE] Avoid misleading error messages in backend
* In case of problems when copying, moving or creating files or directories,
  TYPO3 shows "There might be a problem with write permissions".
  This is misleading if the error is caused by quota.

--- a/Resources/Private/Language/de.fileMessages.xlf
+++ b/Resources/Private/Language/de.fileMessages.xlf
@@ -13,10 +13,10 @@
             <target>Verzeichnis "%s" wurde nicht erstellt.</target>
         </trans-unit>
         <trans-unit id="FileUtility.DirectoryWasNotCopiedTo">
-            <target>Verzeichnis "%s" wurde nicht nach "%s" kopiert.</target>
+            <target>Verzeichnis "%s" wurde NICHT nach "%s" kopiert.</target>
         </trans-unit>
         <trans-unit id="FileUtility.DirectoryWasNotMovedTo">
-            <target>Verzeichnis "%s" wurde nicht nach "%s" verschoben.</target>
+            <target>Verzeichnis "%s" wurde NICHT nach "%s" verschoben.</target>
         </trans-unit>
         <trans-unit id="FileUtility.DirectoryWasNotRenamed">
             <target>Verzeichnis "%s" wurde nicht umbenannt.</target>
