--- a/Resources/Private/Language/fileMessages.xlf
+++ b/Resources/Private/Language/fileMessages.xlf
@@ -13,16 +13,16 @@
                 <source>Directory "%s" not created.</source>
             </trans-unit>
             <trans-unit id="FileUtility.DirectoryWasNotCopiedTo">
-                <source>Directory "%s" was not copied to "%s".</source>
+                <source>Directory "%s" WAS NOT copied to "%s".</source>
             </trans-unit>
             <trans-unit id="FileUtility.DirectoryWasNotMovedTo">
-                <source>Directory "%s" was not moved to "%s".</source>
+                <source>Directory "%s" WAS NOT moved to "%s".</source>
             </trans-unit>
             <trans-unit id="FileUtility.DirectoryWasNotRenamed">
                 <source>Directory "%s" was not renamed.</source>
             </trans-unit>
             <trans-unit id="FileUtility.FileWasNotCopiedTo">
-                <source>File "%s" was not copied to "%s".</source>
+                <source>File "%s" WAS NOT copied to "%s".</source>
             </trans-unit>
             <trans-unit id="FileUtility.FileWasNotCreated">
                 <source>File "%s" was not created.</source>
